test/execflags/vass/print-callstack-on-error-2.good
print-callstack-on-error-2.chpl:4: In iterator 'these':
print-callstack-on-error-2.chpl:5: error: error from myiter1.these(), depth=0
while processing the following Chapel call chain:
  print-callstack-on-error-2.chpl:5: myiter1.these()
  $CHPL_HOME/modules/internal/ChapelIteratorSupport.chpl:: _getIterator(x) [internal module]
  print-callstack-on-error-2.chpl:11: top-level module statements for print-callstack-on-error-2
